--- a/style.css
+++ b/style.css
@@ -38,3 +38,11 @@
     line-height: 3;
     text-align: center;
   }
+
+  canvas{
+    border: 5px solid crimson;
+    border-radius: 20px;
+    box-shadow: 5px 5px 5px blue;
+    margin-top: 160px;
+  }
+  
